--- a/bootstrap/conFusion/index.html
+++ b/bootstrap/conFusion/index.html
@@ -57,7 +57,9 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+          <a class="navbar-brand" href="#"
+            ><img src="img/logo.png" height="30" width="41" alt="" />
+          </a>
           <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
@@ -97,7 +99,9 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col-12 col-sm"></div>
+          <div class="col-12 col-sm">
+            <img src="img/logo.png" class="img-fluid" alt="" />
+          </div>
         </div>
       </div>
     </header>
@@ -108,12 +112,20 @@
           <h3>Our Lipsmacking Culinary Creations</h3>
         </div>
         <div class="col col-sm col-md order-sm-first">
-          <h2>Uthappizza</h2>
-          <p>
-            A unique combination of Indian Uthappam (pancake) and Italian pizza,
-            topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia
-            onion, Guntur chillies and Buffalo Paneer.
-          </p>
+          <div class="media">
+            <img
+              src="img/uthappizza.png"
+              class="d-flex mr-3 img-thumbnail align-self-center"
+            />
+            <div class="media-body">
+              <h2>Uthappizza</h2>
+              <p>
+                A unique combination of Indian Uthappam (pancake) and Italian
+                pizza, topped with Cerignola olives, ripe vine cherry tomatoes,
+                Vidalia onion, Guntur chillies and Buffalo Paneer.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -137,14 +149,23 @@
           <h3>Meet our Culinary Specialists</h3>
         </div>
         <div class="col col-sm col-md order-sm-first">
-          <h2>Alberto Somayya</h2>
-          <h4>Executive Chef</h4>
-          <p>
-            Award winning three-star Michelin chef with wide International
-            experience having worked closely with whos-who in the culinary
-            world, he specializes in creating mouthwatering Indo-Italian fusion
-            experiences.
-          </p>
+          <div class="media">
+            <img
+              src="img/alberto.png"
+              alt=""
+              class="d-flex mr-3 img-thumbnail align-self-center"
+            />
+            <div class="media-body">
+              <h2 class="mt-0">Alberto Somayya</h2>
+              <h4>Executive Chef</h4>
+              <p>
+                Award winning three-star Michelin chef with wide International
+                experience having worked closely with whos-who in the culinary
+                world, he specializes in creating mouthwatering Indo-Italian
+                fusion experiences.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
