--- a/bootstrap/conFusion/index.html
+++ b/bootstrap/conFusion/index.html
@@ -102,6 +102,11 @@
           <div class="col-12 col-sm">
             <img src="img/logo.png" class="img-fluid" alt="" />
           </div>
+          <div class="col-12 col-sm align-self-center">
+            <a href="#ReserveTable">
+              <button class="btn btn-warning">Reserve Table</button>
+            </a>
+          </div>
         </div>
       </div>
     </header>
@@ -118,7 +123,10 @@
               class="d-flex mr-3 img-thumbnail align-self-center"
             />
             <div class="media-body">
-              <h2>Uthappizza</h2>
+              <h2>
+                Uthappizza <span class="badge badge-danger">HOT</span>
+                <span class="badge badge-pill badge-secondary">$4.99</span>
+              </h2>
               <p>
                 A unique combination of Indian Uthappam (pancake) and Italian
                 pizza, topped with Cerignola olives, ripe vine cherry tomatoes,
@@ -134,13 +142,24 @@
           <h3>This Month's Promotions</h3>
         </div>
         <div class="col col-sm col-md order-sm-last">
-          <h2>Weekend Grand Buffet</h2>
-          <p>
-            Featuring mouthwatering combinations with a choice of five different
-            salads, six enticing appetizers, six main entrees and five choicest
-            desserts. Free flowing bubbly and soft drinks. All for just $19.99
-            per person
-          </p>
+          <div class="media">
+            <div class="media-body">
+              <h2>
+                Weekend Grand Buffet <span class="badge badge-danger">NEW</span>
+              </h2>
+              <p>
+                Featuring mouthwatering combinations with a choice of five
+                different salads, six enticing appetizers, six main entrees and
+                five choicest desserts. Free flowing bubbly and soft drinks. All
+                for just $19.99 per person
+              </p>
+            </div>
+            <img
+              src="img/buffet.png"
+              class="d-flex ml-3 img-thumbnail align-self-center"
+              alt=""
+            />
+          </div>
         </div>
       </div>
 
@@ -167,6 +186,53 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="row row-content align-items-center" id="ReserveTable">
+        <div class="col-sm"></div>
+        <div class="col-sm-8">
+          <div class="card">
+            <h3 class="card-header bg-warning text-white">Reserve Table</h3>
+            <div class="card-body">
+              <form action="">
+                <div class="form-group row">
+                  <label for="Number of Guests" class="col-12 col-md-2"
+                    >Number of Guests</label
+                  >
+                  <div class="col-md-10">
+                    <input type="radio" /> 1 <input type="radio" /> 2
+                    <input type="radio" /> 3 <input type="radio" /> 4
+                    <input type="radio" /> 5 <input type="radio" /> 6
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label for="Date" class="col-12 col-md-2"
+                    >Date and Time</label
+                  >
+                  <div class="col-12 col-md-4">
+                    <input
+                      type="date"
+                      class="form-control"
+                      placeholder="Date"
+                    />
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <input
+                      type="time"
+                      class="form-control"
+                      placeholder="Time"
+                    />
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="offset-md-2 col-md-10">
+                    <button class="btn btn-primary">Reserve</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm"></div>
       </div>
     </div>
 
